static/less/main/components/marker-label.less
//
// Load core variables and mixins
// --------------------------------------------------
@import "../../components/variables";
@import "../../components/mixins";


.marker-label {
    padding: 5px 5px 5px 20px;
    min-width: 80px;
    min-height: 25px;
    width: auto;

    background: #ffffff;
    text-align: center;
    word-break: keep-all;

    font-weight: bold;

    font-size: 10px;
    .box-shadow(~"0 0 5px @{gray-light}")
}

